# Remarkable

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  edit_menu.cpp  file_utilities.cpp  install_menu.cpp  main.cpp  main.h  main_menu.cpp  menu.cpp  menu.h  page_template.cpp  page_template.h  remarkable.cpp  rm_template.cpp  rm_template.h  scp.cpp  scp.h  uninstall_menu.cpp  uninstall_menu.h  unnstall_menu.cpp
libmenu/: CMakeLists.txt
libmenu/include/menu/: cli_menu.h  cli_menu_option.h
libmenu/src/: cli_menu.cpp  cli_menu_option.cpp
libmenu/tests/: main.cpp  test_menu.cpp  test_menu.h
libremarkable/: CMakeLists.txt
libremarkable/include/remarkable/: file_utilities.h  remarkable.h  rm_template.h
libremarkable/src/: file_utilities.cpp  remarkable.cpp  rm_template.cpp
reLoader/: edit_menu.cpp  edit_menu.h  install_menu.cpp  install_menu.h  main.cpp  main.h  main_menu.cpp  main_menu.h
reLoaderUi/: CMakeLists.txt  edit_template_dlg.cpp  edit_template_dlg.h  reloader_app.cpp  reloader_app.h  reloader_conect_dlg.cpp  reloader_connect_dlg.h  reloader_frame.cpp  reloader_frame.h  template_list_ctrl.cpp  template_list_ctrl.h
reLoaderUi/bitmaps/: edit_icon.xpm  edit_icon_16.xpm  trash_icon.xpm  trash_icon_16.xpm
